# BoostAsioChat

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt.old  LICENSE  README.md
client/include/: chat_client.h
client/source/: CMakeLists.txt  chat_client.cpp  client.cpp
common/include/: chat_message.h  chat_message_type.h  chat_session.h  easylogging++.h  message.h
common/source/: CMakeLists.txt  chat_message.cpp  chat_message_type.cpp  chat_session.cpp  easylogging.cc  message.cpp
server/: CMakeLists.txt
server/include/: chat_channel.h  chat_server.h  chat_user.h  chat_user_manager.h
server/source/: CMakeLists.txt  chat_channel.cpp  chat_server.cpp  chat_user.cpp  chat_user_manager.cpp  server.cpp
